[gd_scene load_steps=7 format=2]

[ext_resource path="res://PumpkinPROP.tres" type="Texture" id=1]
[ext_resource path="res://LightTexture.png" type="Texture" id=2]
[ext_resource path="res://Prop.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 512 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -409.6, -204.8, -204.8, -307.2, -102.4, -307.2, 102.4, -204.8, 102.4, 307.2, 409.6, 307.2, 409.6, 409.6, -409.6, 512 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -307.2, -204.8, -102.4, -307.2, 204.8, -307.2, 409.6, -102.4, 409.6, 204.8, 204.8, 409.6, -204.8, 409.6, -409.6, 204.8, -409.6, 0 )

[node name="Prop" type="Sprite"]
scale = Vector2( 0.078125, 0.078125 )
z_index = -1
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 7.62939e-06 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Light" type="Sprite" parent="."]
modulate = Color( 0.866667, 0.462745, 0.0745098, 0.568627 )
show_behind_parent = true
position = Vector2( 5.07969, 0 )
scale = Vector2( 2.4, 2.4 )
texture = ExtResource( 2 )

[node name="GraveOccluder" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="PumpkinOccluder" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
